--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,8 @@
     "@tailwindcss/postcss": "4.1.18",
     "@types/js-yaml": "4.0.9",
     "@types/node": "24.10.4",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "@vitejs/plugin-react": "5.1.2",
     "autoprefixer": "10.4.23",
     "eslint": "9.39.2",
