chore: 設定ファイルを更新
- pyproject.toml: pyproject を同期
- pyproject.toml: my-py-lib 73779159 -> 1d54e8eb
- uv.lock: uv.lock を同期

🤖 Generated with [py-project](https://github.com/kimata/py-project)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 
 dependencies = [
-    "my-lib @ git+https://github.com/kimata/my-py-lib@737791597625dc3c73db481cb1558b8021c4a736",
+    "my-lib @ git+https://github.com/kimata/my-py-lib@1d54e8ebb3542df37dfb50055d9b5bf684e80f65",
     "flask>=3.0.0",
     "flask-cors>=4.0.0",
     "requests>=2.31.0",
@@ -110,6 +110,9 @@ module = [
 ]
 ignore_missing_imports = true
 follow_imports = "skip"
+
+[tool.ty]
+[tool.ty.rules]
 
 [build-system]
 requires = ["hatchling"]
